Fix display of check mark for !ToggleButton on IE6 high contrast mode, fixes #11161.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22190 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1904,6 +1904,9 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 	display:inline !important;
 	visibility:hidden;
 }
+.dj_ie6 .dijitToggleButtonIconChar {
+	font-family: "Arial Unicode MS";	/* otherwise the checkmark appears as a box */
+}
 .dijit_a11y .dijitToggleButtonChecked .dijitToggleButtonIconChar {
 	display: inline !important; /* In high contrast mode, display the check symbol */
 	visibility:visible !important;
